# rust-url-shortener

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
.github/workflows/: build-multiple-runners.yml  build.yml
entity/src/: lib.rs  mod.rs  prelude.rs  url_store.rs
migration/src/: lib.rs  m20230719_090631_create_url_map_table.rs
src/: main.rs
src/database/: schema.rs
